# rust_email_newsletter

./: Cargo.toml  configuration.yaml
migrations/: 20260318131009_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
