[package]
name = "rust_email_newsletter"
version = "0.1.0"
edition = "2024"
authors = ["Loi Ngo <ngophuocloi2511@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_email_newsletter"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
