[package]
name = "rust_email_newsletter"
version = "0.1.0"
edition = "2024"
authors = ["Loi Ngo <ngophuocloi2511@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust_email_newsletter"

[dependencies]
config = "0.15.22"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.44"
log = "0.4.29"
env_logger = "0.11.10"

[dependencies.uuid]
version = "1.22.0"
# Lets you generate random UUIDs
features = ["v4"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
